--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@vercel/speed-insights": "^1.1.0",
     "cra-template": "1.2.0",
     "emailjs-com": "^3.2.0",
     "react": "^19.0.0",
