--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,10 +119,52 @@ jobs:
         run: npm ci
 
       - name: Run security audit
-        run: npm audit --audit-level=moderate
+        run: |
+          echo "🔍 Running security audit..."
+          echo "Checking for high severity vulnerabilities..."
+          
+          # Check for high severity issues (these should fail the build)
+          if npm audit --audit-level=high > /dev/null 2>&1; then
+            echo "✅ No high severity vulnerabilities found"
+          else
+            echo "❌ High severity vulnerabilities found!"
+            npm audit --audit-level=high
+            exit 1
+          fi
+          
+          # Check for moderate issues (warn but don't fail)
+          echo ""
+          echo "Checking for moderate severity vulnerabilities..."
+          if npm audit --audit-level=moderate > /dev/null 2>&1; then
+            echo "✅ No moderate severity vulnerabilities found"
+          else
+            echo "⚠️ Moderate severity vulnerabilities found:"
+            npm audit --audit-level=moderate || true
+            echo ""
+            echo "💡 Consider updating dependencies when possible"
+            echo "   Run 'npm audit fix' or 'npm audit fix --force' locally"
+          fi
 
-      - name: Check for known vulnerabilities
-        run: npx audit-ci --moderate
+      - name: Generate security report
+        run: |
+          echo "📊 Generating security report..."
+          echo "Current audit status:" > security-report.txt
+          npm audit >> security-report.txt 2>&1 || true
+          
+          echo "" >> security-report.txt
+          echo "Dependencies overview:" >> security-report.txt
+          npm list --depth=0 >> security-report.txt 2>&1 || true
+          
+          echo "Security report generated"
+        continue-on-error: true
+
+      - name: Upload security report
+        uses: actions/upload-artifact@v4
+        with:
+          name: security-report
+          path: security-report.txt
+          retention-days: 30
+        continue-on-error: true
 
   # Job 5: Build application
   build:
@@ -251,62 +293,17 @@ jobs:
           name: lighthouse-report
           path: lighthouse-report.json
 
-  # Job 8: Deploy Preview (for PRs)
-  deploy-preview:
-    runs-on: ubuntu-latest
-    needs: [build, security-audit]
-    if: github.event_name == 'pull_request'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-files
-          path: build/
-
-      - name: Deploy to Vercel Preview
-        uses: amondnet/vercel-action@v25
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: ./
-
-  # Job 9: Deploy to Production
-  deploy-production:
-    runs-on: ubuntu-latest
-    needs: [build, security-audit, lighthouse]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-files
-          path: build/
-
-      - name: Deploy to Vercel Production
-        uses: amondnet/vercel-action@v25
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod'
-          working-directory: ./
-
-  # Job 10: Notify on Success/Failure
+  # Job 8: Notify on Success/Failure
   notify:
     runs-on: ubuntu-latest
-    needs: [deploy-production, deploy-preview]
+    needs: [build, security-audit, lighthouse, bundle-analysis]
     if: always()
     steps:
       - name: Notify success
         if: ${{ success() }}
-        run: echo "✅ All checks passed successfully!"
+        run: |
+          echo "✅ All checks passed successfully!"
+          echo "🚀 Vercel will automatically deploy your changes"
         
       - name: Notify failure
         if: ${{ failure() }}
