--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -271,9 +271,14 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+      
+      - name: Install Chrome
+        uses: browser-actions/setup-chrome@v2
+        with:
+          chrome-version: stable
+          install-dependencies: true
 
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
