--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,14 +18,6 @@
     "allowJs": true,
     "checkJs": false
   },
-  "include": [
-    "src/**/*",
-    "src/**/*.jsx",
-    "src/**/*.js"
-  ],
-  "exclude": [
-    "node_modules",
-    "build",
-    "dist"
-  ]
+  "include": ["src/**/*", "src/**/*.jsx", "src/**/*.js"],
+  "exclude": ["node_modules", "build", "dist"]
 }
